[project]
name = "youtube-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.4",
]
